# BitCask-Python

./: pyproject.toml
src/: __init__.py  datafile.py  keydir.py
tests/: test_datafile.py  test_keydir.py
