[tool.poetry]
name = "bitcask-python"
version = "0.1.0"
description = ""
authors = ["Aryav Bharali <bharali@wisc.edu>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
